syntax = "proto3";

package user_grpc;

option go_package = "./user_service";

service User {
    rpc GetUserById (UserRequest) returns (UserReply) {}
    rpc GetUserList (Empty) returns (UsersReply){}
    rpc UpdateUser (UpdateUserRequest) returns (UserReply) {}
    rpc CreateUser (CreateUserRequest) returns (UserReply) {}
    rpc DeleteUser (UserRequest) returns (UserReply) {}
}

message Empty {}

message UsersReply {
    repeated UserReply users = 1;
}

message UserReply {
    //UserInfo userInfo = 1;
    //ErrorMessage error = 2;
    int32 id = 1;
    string account = 2;
    string name = 3;
    string phone = 4;
}

message UserRequest {
    int32 id =1;
}

message UpdateUserRequest {
    int32 id = 1;
    string account = 2;
    string name = 3;
    string phone = 4;
}

message CreateUserRequest {
    string account = 2;
    string name = 3;
    string phone = 4;
}